// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination component matches snapshot with default props 1`] = `
<DocumentFragment>
  <div
    class="css-1yp1utw"
  >
    <button
      class="css-e9qjh2"
      disabled=""
    >
      <img
        alt="left-arrow"
      />
    </button>
    <button
      class="css-16gpifp"
    >
      1
    </button>
    <button
      class="css-e9qjh2"
    >
      2
    </button>
    <span
      class="css-1mhloja"
    >
      ...
    </span>
    <button
      class="css-e9qjh2"
    >
      5
    </button>
    <button
      class="css-e9qjh2"
    >
      <img
        alt="right-arrow"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`Pagination component matches snapshot with updated props 1`] = `
<DocumentFragment>
  <div
    class="css-1yp1utw"
  >
    <button
      class="css-e9qjh2"
    >
      <img
        alt="left-arrow"
      />
    </button>
    <button
      class="css-e9qjh2"
    >
      1
    </button>
    <button
      class="css-e9qjh2"
    >
      2
    </button>
    <button
      class="css-16gpifp"
    >
      3
    </button>
    <button
      class="css-e9qjh2"
    >
      4
    </button>
    <button
      class="css-e9qjh2"
    >
      5
    </button>
    <button
      class="css-e9qjh2"
    >
      <img
        alt="right-arrow"
      />
    </button>
  </div>
</DocumentFragment>
`;
